<resources>
    <string name="app_name">MyChat</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="todo">todo</string>
    <string name="don_t_have_account">Don\'t Have account?</string>
    <string name="signup">SignUp</string>
    <string name="name">name</string>
    <string name="email_id">email_id</string>
    <string name="conform">conform password</string>
    <string name="already">I have account ?</string>
    <string name="ResetPassword">Forget Password</string>
    <string name="save">save</string>
    <string name="change_picture">change picture</string>
    <string name="remove_picture">Remove picture</string>
    <string name="logout">logout</string>
    <string name="change_password">Change Password</string>
    <string name="reset_passwordd">Reset password</string>
    <string name="enter_email">Enter Email</string>
    <string name="reset_password_instruction">Reset password instruction has been sent on email :%1$s</string>
    <string name="retry">Retry</string>
    <string name="close">close</string>
    <string name="Task_is_failed">Task is failed</string>
    <string name="Retry_Timer">Resend : %1$s</string>
    <string name="please_wait">Please wait...</string>
    <string name="newtwork_info">Please check internet Connection !</string>
    <string name="chat">Chat</string>
    <string name="request">Request</string>
    <string name="find_friend">find</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="friend_is_empty">friend is empty</string>
    <string name="no_friend_request">No friend Request</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="send_request">Send Request</string>
    <string name="Request_sent_successfull">Request sent Successfull</string>
    <string name="accept">accept</string>
    <string name="cancel">Cancel</string>
    <string name="chat_is_empty">Chat is Empty</string>
    <string name="camera">camera</string>
    <string name="video">video</string>
    <string name="gallery">Gallery</string>
    <string name="upload_progressbar">Upload %1$s (%2$s %%)</string>
    <string name="Download_progressbar">Downloding %1$s (%2$s %%)</string>
    <string name="failed_tp_upload">failed to Upload : %1$s</string>
    <string name="forward">forward</string>
    <string name="delete">delete</string>
    <string name="share">share</string>
    <string name="message_failed_to_delete">message failed to delete %1$s</string>
    <string name="faile_to_download">failed to download %1$s</string>
    <string name="failed_to_store">failed to store file</string>
    <string name="file_downlod_successfully">file Downloded successfully</string>
    <string name="view">view</string>
    <string name="failed_to_download">failed to download :%1$s</string>
    <string name="share_with">Share with</string>
    <string name="failed_to_fetch_user">failed to Fetch User</string>
    <string name="Someting_went_wrong">Something went wrong %1$s</string>
    <string name="failed_to_store_device_Token">failed to store device Token</string>
    <string name="otp_code_text">MY\nCHAT</string>
    <string name="otp_verification_text">Otp Verifiction</string>
    <string name="verify_code">Verify</string>
    <string name="otp_description_text">otp sent your mobile number</string>
</resources>