<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:id="@+id/llcamera">
        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:contentDescription="@string/todo"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/camera_alt_24"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:layout_gravity="center_horizontal"
            android:textColor="@android:color/black"
            android:text="@string/camera"/>
    </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:id="@+id/llGallery">
            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:contentDescription="@string/todo"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/gallery"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@android:color/black"
                android:text="@string/gallery"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:id="@+id/llVideo">
            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:contentDescription="@string/todo"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/video"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@android:color/black"
                android:text="@string/video"/>
        </LinearLayout>

    </LinearLayout>
    <ImageView
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        android:id="@+id/close"
        android:src="@drawable/closeicon"
        android:background="@drawable/circle_shape"/>

</LinearLayout>