<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:padding="2dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
       <com.mikhaellopez.circularimageview.CircularImageView
           android:layout_width="100dp"
           android:layout_height="100dp"
           android:contentDescription="@string/todo"
           android:src="@drawable/default_profile"
           android:id="@+id/ivprofile"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:text="@string/username"
            android:padding="3dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black"
            />
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:weightSum="3"
               android:orientation="horizontal">
               <Button
                   android:id="@+id/btnaccept"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginEnd="5dp"
                   android:layout_weight="1"
                   android:layout_marginRight="5dp"
                   android:text="@string/accept"/>
               <Button
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:id="@+id/btnCancel"
                   android:text="@string/cancel"
                   android:layout_weight="1"
                   android:backgroundTint="@android:color/holo_red_dark"/>
               <ProgressBar
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:id="@+id/progressBar"
                   android:layout_weight="1"
                   android:visibility="gone"
                  android:layout_marginLeft="10dp"
                   android:layout_marginStart="10dp"/>

               
           </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/linearlayout" />

</androidx.constraintlayout.widget.ConstraintLayout>